fixed z-index value

--- a/sass/views/contact.scss
+++ b/sass/views/contact.scss
@@ -8,7 +8,7 @@
 	width: 60%;
 	height: 60%;
 	margin: auto;
-	z-index: 202;
+	z-index: 200;
 	-webkit-border-radius: 8px; -moz-border-radius: 8px; border-radius: 8px;
 
 	.contact-top
