--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -750,7 +750,7 @@ body {
   width: 60%;
   height: 60%;
   margin: auto;
-  z-index: 202;
+  z-index: 200;
   -webkit-border-radius: 8px;
   -moz-border-radius: 8px;
   border-radius: 8px;
